@@ -97,6 +97,7 @@ v 8.11.0 (unreleased)
   - Add CI configuration button on project page
   - Fix merge request new view not changing code view rendering style
   - Make error pages responsive (Takuya Noguchi)
+  - The performance of the project dropdown used for moving issues has been improved
   - Fix skip_repo parameter being ignored when destroying a namespace
   - Change requests_profiles resource constraint to catch virtually any file
   - Bump gitlab_git to lazy load compare commits
